[package]
name = "disassemble"
version = "0.0.1"
authors = ["Bruce Mitchener <bruce.mitchener@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Tools for working with disassembled code."
keywords = ["disassemble", "assembly"]
homepage = "https://github.com/endoli/disassemble.rs"
repository = "https://github.com/endoli/disassemble.rs"
documentation = "https://endoli.github.io/disassemble.rs/"

[dependencies]
