[package]
name = "disassemble"
version = "0.0.1"
authors = ["Bruce Mitchener <bruce.mitchener@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Tools for working with disassembled code and extracting higher level information like control flow graphs. Useful for writing disassemblers, decompilers, debuggers, profilers and more."
keywords = ["disassemble", "assembly", "compile", "decompile"]
homepage = "https://github.com/endoli/disassemble.rs"
repository = "https://github.com/endoli/disassemble.rs"
documentation = "https://endoli.github.io/disassemble.rs/"

[features]
bpf = ["rbpf"]
webassembly = ["parity-wasm"]
all = ["bpf", "capstone", "webassembly", "burst"]

[dependencies]
petgraph = "0.4.4"
burst = { version = "0.0.2", optional = true }
capstone = { version = "0.5", optional = true }
parity-wasm = { version = "0.32", optional = true }
rbpf = { git = "https://github.com/qmonnet/rbpf", optional = true }

[workspace]
members = ["tools/disassemble-bpf", "tools/disassemble-wasm"]
